@@ -1,4 +1,4 @@
-% Generated by roxygen2 (4.1.0): do not edit by hand
+% Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/ev.R
 \name{ev}
 \alias{ev}
@@ -33,6 +33,7 @@ if (require(antiProfilesData)) {
   e <- exprs(apColonData)[,pData(apColonData)$Status==1]
   ev <- ev(e, cutoff=2.54)
 }
+
 }
 \author{
 Hector Corrada Bravo \email{hcorrada@gmail.com}
