@@ -3,9 +3,14 @@
 
 \encoding{UTF-8}
 
+\section{Version 1.11.1}{
+  \itemize{
+    \item Use subsetted computation from matrixStats package.
+  }
+}
 \section{Version 1.9.1}{
   \itemize{
     \item Add NEWS file
     \item Add code to compute expression variability measure from Alemu, et al. NAR 2014.
-  }		 
+  }
 }
